# agentic-trading

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_trade_journal.py  003_agent_conversations.py
configs/: alert_rules.yml  backtest.toml  backtest_eth_15m.toml  default.toml  fx_paper.toml  instruments.toml  live.toml  paper.toml  prometheus.yml  retrieval_policy.yaml  strategies.toml
data/historical/: conversations.jsonl
docs/: USER_GUIDE.md  dashboard-ux-improvement-plan.md  institutional-control-plane-spec.md  legacy_dump.md.rtf  refactoring-plan.md  refurb-plan.md  state.md  testing-guide.md
docs/adr/: 001-maturity-ladder.md  002-impact-tiering.md  003-drift-thresholds.md  004-execution-tokens.md  005-governance-above-risk.md
docs/architecture/: CHANGES.md  agent-framework-and-control-plane.md  component-data-inventory.md
docs/data/: data-framework.md  domain-model.md  event-log.md  metadata-standard.md
docs/knowledge/: taxonomy.md
docs/llm/: contracts.md
docs/quality/: validation.md
docs/references/: cmt-curriculum-2026.md  crypto-options-greeks.md  intermarket-macro.md  onchain-metrics.md  smc-patterns.md
runbooks/: incident_desync.md  incident_exchange_outage.md  incident_feed_outage.md  incident_stuck_orders.md  quickstart.md
schemas/core/: agent-conversation.json  approval-request.json  audit-entry.json  balance.json  candle.json  decision-audit.json  experiment.json  feature-vector.json  fill.json  governance-decision.json  instrument.json  memory-entry.json  narration-item.json  order.json  policy-set.json  position.json  signal.json  trade.json
schemas/events/: agent-step-completed.json  agent-step-started.json  cost-metric.json  decision.json  exception.json  retrieval.json  tool-call.json  user-action.json  validation.json
schemas/llm/: envelope.json
schemas/meta/: metadata.json
schemas/validation/: business-rule.json  claim-annotation.json  validation-result.json
scripts/: download_historical.py  killswitch.py  optimize.py  run_backtest.py  run_live.py  run_paper.py  set_tp_sl.py  test_pipeline_trade.py
skills/: marl_hft_strategy_optimizer.md  pairs_trading_parameter_optimizer.md
skills/cmt-analyst/: SKILL.md
skills/crypto-trading-agent/: SKILL.md
src/agentic_trading/: __init__.py  __main__.py  cli.py  main.py  orchestrator.py
tests/: conftest.py
tests/golden/: test_deterministic_backtest.py
tests/integration/: test_control_plane_pipeline.py  test_event_bus_roundtrip.py  test_feature_pipeline_extended.py  test_full_pipeline.py  test_fx_paper_trading.py  test_fx_smoke_e2e.py  test_kill_switch_propagation.py  test_model_registry_lifecycle.py  test_order_dedupe.py  test_pre_trade_safety.py  test_strategy_parity.py  test_surveillance_detection.py
tests/property/: test_no_lookahead.py  test_order_state_machine.py  test_position_math.py  test_risk_invariants.py
tests/unit/: test_agent_framework.py  test_agent_wrappers.py  test_approval_workflows.py  test_backtest_engine.py  test_backtest_results.py  test_bus_manager.py  test_bus_store_integration.py  test_business_rules.py  test_candle_builder.py  test_ccxt_adapter_v5.py  test_ccxt_trading_stop.py  test_circuit_breakers.py  test_clock.py  test_cmt_analyst_agent.py  test_cmt_engine.py  test_cmt_models.py  test_cmt_strategies.py  test_config.py  test_confluence_auxiliary.py  test_consensus_gate.py  test_context_manager.py  test_control_plane_day1.py  test_control_plane_day3.py  test_control_plane_day4.py  test_control_plane_day5.py  test_control_plane_day6.py  test_correlation_risk.py  test_critique_validator.py  (+103 more)
(+436 files in other folders)
