[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-trading"
version = "0.1.0"
description = "Multi-agent crypto trading platform"
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "redis>=5.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pyarrow>=14.0",
    "hmmlearn>=0.3",
    "numpy>=1.26",
    "pandas>=2.1",
    "prometheus-client>=0.20",
    "structlog>=24.0",
    "tomli>=2.0",
    "aiohttp>=3.9",
    "click>=8.1",
    "python-multipart>=0.0.9",
    "uvloop>=0.19; sys_platform != 'win32'",
    "fastapi>=0.110",
    "jinja2>=3.1",
    "uvicorn>=0.27",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.90",
    "pytest-cov>=4.1",
    "ruff>=0.2",
    "mypy>=1.8",
    "types-redis>=4.6",
    "pre-commit>=3.6",
]
viz = [
    "lightweight-charts>=2.0",
]

[project.scripts]
agentic-trading = "agentic_trading.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_trading"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires Redis/Postgres (deselect with -m 'not integration')",
    "property: hypothesis property tests",
    "golden: deterministic backtest golden tests",
]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["UP042"]  # Allow (str, Enum) pattern — used consistently across codebase

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
no_strict_optional = true
allow_untyped_defs = true
check_untyped_defs = false
exclude = ["tests/", "alembic/", "scripts/"]

[[tool.mypy.overrides]]
module = "agentic_trading.core.*"
disallow_untyped_defs = false
warn_unreachable = true

[[tool.mypy.overrides]]
module = "agentic_trading.governance.*"
disallow_untyped_defs = false
warn_unreachable = true

[tool.coverage.run]
source = ["src/agentic_trading"]
omit = [
    "*/tests/*",
    "*/alembic/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 0
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ ==",
    "raise NotImplementedError",
    "@overload",
]
